--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,62 +1,85 @@
 body{
-                font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
-                /* background-image: url('public/images/donuts.jpg'); */
-            }
-            ul li{
-                list-style: none;
-            }
-            table{
-                font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
-                font-size: 12px;
-                width: 480px;
-                text-align: left;
-                border-collapse: collapse;
-                margin: 30px 30px 30px 15px;
-            }
-            table th{
-                font-weight: normal;
-                font-size: 14px;
-                border-bottom: 2px solid #6678b1;
-                border-right: 30px solid #fff;
-                border-left: 30px solid #fff;
-                color: #039;
-                padding: 8px 2px;
-            }
-            table tr{
-                border-bottom: 1px solid #ddd;
-            }
-            tbody tr td{
-                border-right: 30px solid #fff;
-                border-left: 30px solid #fff;
-                color: #669;
-                padding: 12px 2px 0;
-            }
-            h4{
-                color: #669;
-            }
-            p{
-                color:#039;
-            }
-            a.alldonuts{
-                margin-right:50px;
-            }
-            .button {
-                display: block;
-                /* width: 115px; */
-                /* height: 25px; */
-                background: #4E9CAF;
-                padding: 10px;
-                text-decoration: none;
-                text-align: center;
-                border-radius: 5px;
-                color: white;
-                font-weight: bold;
-                float:left;
-                margin-bottom:45px;
-            }
-            .clearclass{
-                clear:left;
-            }
-            p.explanation{
-                color:#800020;
-            }
+    font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
+    
+    /* opacity:0.5; */
+    width:100%;
+    height:100%;
+}
+.donutbackground{
+  background-image: url('../images/donutbackground.jpg');
+  background-size:cover;
+  width: 100%;
+  height: 150px;
+}
+.centerBttns{
+  width:45%;
+  height:100%;
+  margin:0 auto;
+  padding-top:50px;
+}
+.bg-color{
+  /* background-color:whitesmoke; */
+  padding:10px;
+}
+ul li{
+    list-style: none;
+}
+table{
+    font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
+    font-size: 12px;
+    width: 480px;
+    text-align: left;
+    border-collapse: collapse;
+    margin: 30px 30px 30px 15px;
+}
+table th{
+    font-weight: normal;
+    font-size: 14px;
+    border-bottom: 2px solid #6678b1;
+    border-right: 30px solid #fff0;
+    border-left: 30px solid #fff0;
+    color: #039;
+    /* color:black; */
+    /* background-color:whitesmoke; */
+    padding: 8px 2px;
+}
+table tr{
+    border-bottom: 1px solid #ddd;
+}
+tbody tr td{
+    border-right: 30px solid #fff0;
+    border-left: 30px solid #fff0;
+    color: #669;
+    /* color:black;  */
+    /* background-color:whitesmoke; */
+    padding: 12px 2px 0;
+}
+h4{
+    color: #669;
+}
+p{
+    color:#039;
+}
+a.alldonuts{
+    margin-right:50px;
+}
+.button {
+    display: block;
+    /* width: 115px; */
+    /* height: 25px; */
+    background: #4E9CAF;
+    padding: 10px;
+    text-decoration: none;
+    text-align: center;
+    border-radius: 5px;
+    color: white;
+    font-weight: bold;
+    float:left;
+    margin-bottom:45px;
+}
+.clearclass{
+    clear:left;
+}
+p.explanation{
+    color:#800020;
+}
